src/test/deca/avecObjet/valid/field_write_then_read_ok.deca
// Description :
//    Écriture puis lecture d'un champ.
//
// Resultats :
//    11

class A {
    int x;
}

{
    A a = new A();
    a.x = 11;
    println(a.x);
}

