src/test/deca/avecObjet/invalid/is_instance_of_inconnu.deca
class A {}

{
    A a = new A();
    if (a instanceof Inconnu) {
        println("erreur");
    }
}